Create function to check the time if there is a scheduled to take the pills

--- a/raspberry/TODO
+++ b/raspberry/TODO
@@ -1,1 +1,3 @@
 [/] Create function to save new face and information
+[/] Create function to check the time if there is a scheduled to take the pills
+[] Make progress in the main program
