initial fix algo_check_for_schedules

--- a/raspberry/TODO
+++ b/raspberry/TODO
@@ -4,3 +4,4 @@
 [] Finish the algorithm action 2
 [] Finish the algorithm action 3
 [] Finish camera fetching from the website
+[] Have an interuptable speaking and uninterruptable speaking
